--- a/src/themes/nrf/app/footer/footer.component.html
+++ b/src/themes/nrf/app/footer/footer.component.html
@@ -59,12 +59,20 @@
           <h4> Follow Us </h4>
           <ul class="social-network social-circle mb-4">
             <li>
-              <a href="#" class="icoFacebook" title="Facebook">
+              <a href="https://www.facebook.com/nrfkenya" class="icoFacebook" title="Facebook" target="_blank">
                 <i class="fa-brands fa-square-facebook fa-lg text-white"> </i>
               </a>
             </li>
-            <li> <a href="#" class="icoLinkedin" title="Linkedin"> <i class="fa-brands fa-linkedin fa-lg text-white"> </i> </a> </li>
-            <li> <a href="#"> <i class="fa-brands fa-youtube fa-lg text-white" aria-hidden="true"> </i> </a> </li>
+            <li>
+              <a href="https://www.linkedin.com/company/national-research-fund-kenya/" target="_blank" class="icoLinkedin" title="Linkedin">
+                <i class="fa-brands fa-linkedin fa-lg text-white"> </i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/@nationalresearchfundkenya8036" target="_blank">
+                <i class="fa-brands fa-youtube fa-lg text-white" aria-hidden="true"> </i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
