--- a/src/themes/nrf/app/home-page/home-page.component.html
+++ b/src/themes/nrf/app/home-page/home-page.component.html
@@ -6,6 +6,38 @@
   <ds-themed-top-level-community-list></ds-themed-top-level-community-list>
 </div>
 
+<div class="container-fluid bg-light pt-4">
+  <div class="container">
+
+  </div>
+</div>
+<section class="py-12 py-sm-24 bg-dark position-relative">
+  <div class="container position-relative">
+    <div class="mw-md mx-auto mw-lg-none">
+      <div class="row align-items-end py-5">
+        <div class="col-12 col-lg-6 col-xl-8 mb-16 mb-lg-0">
+          <div class="mw-lg">
+            <h1 class="h3 text-white mb-6">Registry of Repositories in Kenya (RoRiK)</h1>
+            <div class="mw-md opacity-75">
+              <p class="text-white mb-0">
+                NRF is developing a Registry of Research Repositories in Kenya (RoRiK) in
+                an effort to promote access to research data in the country.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6 col-xl-4">
+          <div class="d-flex w-100 ps-xl-16 flex-column ms-lg-auto mw-lg-xs">
+            <a class="btn mb-4 bg-nrf-green text-white bold" routerLink="/nrf-pages/repositories-in-kenya">
+              Go to the Registry
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <div class="container">
   <div class="row">
     <div class="col-md-9 mr-0 pr-0">
