pucmm initial customizations

--- a/src/themes/pucmm/app/header/header.component.html
+++ b/src/themes/pucmm/app/header/header.component.html
@@ -1,44 +1,38 @@
 <header>
 
-  <div class="container-fluid bg-nrf-green">
+  <div class="container-fluid bg-pucmm-light-blue">
     <div class="container" id="topNavContainer">
         <nav class="navbar navbar-expand-lg py-0" id="topNav">
           <div class="d-flex mobile-hidden">
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" target="_blank" href="https://www.facebook.com/nrfkenya">
+                <a class="nav-link" aria-current="page" target="_blank" href="https://www.facebook.com/pucmm">
                   <i class="fa-brands fa-square-facebook fa-lg text-white"></i>
                   <span class="show-onhover">Facebook</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" target="_blank" href="https://x.com/nrfkenya">
+                <a class="nav-link" aria-current="page" target="_blank" href="https://x.com/pucmm">
                   <i class="fa-brands fa-square-twitter fa-lg text-white"></i>
                   <span class="show-onhover">Twitter</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" target="_blank" href="https://www.youtube.com/@nationalresearchfundkenya8036">
+                <a class="nav-link" aria-current="page" target="_blank" href="https://www.youtube.com/pucmmtv">
                   <i class="fa-brands fa-youtube fa-lg text-white"></i>
                   <span class="show-onhover">YouTube</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" target="_blank" href="https://www.linkedin.com/company/national-research-fund-kenya/">
+                <a class="nav-link" aria-current="page" target="_blank" href="https://www.linkedin.com/edu/school?id=12020">
                   <i class="fa-brands fa-linkedin fa-lg text-white"></i>
                   <span class="show-onhover">LinkedIn</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" target="_blank" href="https://outlook.office.com/mail/">
-                  <i class="fas fa-mail-bulk fa-lg text-white"></i>
-                  <span class="show-onhover">Staff Mail</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" target="_blank" href="https://nrfstaff.kinetics.services/auth/login">
-                  <i class="fas fa-id-card fa-lg text-white"></i>
-                  <span class="show-onhover">Staff Portal</span>
+                <a class="nav-link" aria-current="page" target="_blank" href="http://www.instagram.com/pucmm">
+                  <i class="fa-brands fa-instagram fa-lg text-white"></i>
+                  <span class="show-onhover">Instagram</span>
                 </a>
               </li>
             </ul>
@@ -52,7 +46,7 @@
     </div>
   </div>
 
-  <div class="container-fluid" id="mainNavContainer">
+  <div class="container-fluid bg-pucmm-dark-blue" id="mainNavContainer">
     <div class="container">
       <ds-themed-navbar></ds-themed-navbar>
     </div>
