--- a/src/themes/pucmm/app/footer/footer.component.html
+++ b/src/themes/pucmm/app/footer/footer.component.html
@@ -5,72 +5,77 @@
       <div class="row">
         <div class="col-md-3 col-sm-6">
           <div class="footer-pad">
-            <h4> About Us</h4>
+            <h4> Campus de Santiago </h4>
             <ul class="list-unstyled">
-              <li> <a href="https://www.nrf.go.ke/mandate/" target="_blank">
-                Mandate</a> </li>
-              <li> <a href="https://www.nrf.go.ke/mission-vision/" target="_blank">
-                Mission & Vision and Core Values</a></li>
-              <li> <a href="https://www.nrf.go.ke/service-charter/" target="_blank">
-                Service Charter </a></li>
-              <li> <a href="https://www.nrf.go.ke/board-of-trustees/" target="_blank">
-                Board of Trustees</a></li>
-              <li> <a href="https://www.nrf.go.ke/management/" target="_blank">
-                Management</a></li>
+              <li> Autopista Duarte Km 1 1/2  </li>
+              <li> Santiago </li>
+              <li> República Dominicana </li>
+              <li> Tel.: (809) 580-1962  </li>
             </ul>
           </div>
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="footer-pad">
-            <h4> Our Programs</h4>
+            <h4> Campus de Santo Domingo </h4>
             <ul class="list-unstyled">
-              <li><a href="https://www.nrf.go.ke/multidisciplinary-research-2/" target="_blank">
-                Multidisciplinary Research </a> </li>
-              <li><a href="https://www.nrf.go.ke/innovation-2/" target="_blank">
-                Innovation</a> </li>
-              <li><a href="https://www.nrf.go.ke/scientific-events-2/">
-                Scientific Events</a></li>
-              <li><a href="https://www.nrf.go.ke/incubation-2/" target="_blank">
-                Incubation</a></li>
-              <li><a href="https://www.nrf.go.ke/strategic-2/" target="_blank">
-                Strategic Research Interventions</a></li>
-              <li><a href="https://www.nrf.go.ke/bilateral-multilateral-research-2/" target="_blank">
-                Bilateral/Multilateral Research Grants</a></li>
+              <li> Abraham Lincoln esq. Simón Bolívar  </li>
+              <li> Santo Domingo  </li>
+              <li> República Dominicana  </li>
+              <li> Tel.: (809) 580-1962 </li>
             </ul>
           </div>
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="footer-pad">
-            <h4> Find Resources </h4>
+            <h4> Extensión Puerto Plata </h4>
             <ul class="list-unstyled">
-              <li> <a href="https://www.nrf.go.ke/category/grants-and-calls/" target="_blank">
-                Grants Announcements </a> </li>
-              <li> <a href="https://www.nrf.go.ke/careers/" target="_blank">
-                Careers </a> </li>
-              <li> <a href="https://www.nrf.go.ke/shortlisted-concept-notes/" target="_blank">
-                Shortlisted Concept Notes</a> </li>
-              <li> <a href="https://www.nrf.go.ke/category/tenders/"> Tenders </a> </li>
-              <li> <a href="https://www.nrf.go.ke/newsletters/"> Newsletters </a> </li>
+              <li> Calle Separación No.2  </li>
+              <li> Puerto Plata  </li>
+              <li>  República Dominicana </li>
+              <li> Tel.: (809) 586-2060  </li>
             </ul>
           </div>
         </div>
         <div class="col-md-3">
-          <img src="/assets/nrf/images/nrf-logo-small.png" alt="" class="w-100 mb-4"/>
-          <h4> Follow Us </h4>
+          <h4> Línea de Atención </h4>
+          <ul class="list-unstyled">
+            <li>
+              <i class="fa fa-phone text-white"></i>
+              <span class="show-onhover">Teléfono</span> 1(809) 200 1962
+            </li>
+            <li>
+              <i class="fas fa-whatsapp text-white"></i>
+              <span class="show-onhover">WhatsApp</span>  (809) 723 1960
+            </li>
+            <li>
+              <i class="fa fa-envelope text-white"></i>
+              <span class="show-onhover">Correo electrónico</span>  info@pucmm.edu.do
+            </li>
+            <li>
+              <i class="fa fa-envelope-open text-white"></i>
+              <span class="show-onhover">Reclamaciones y sugerencias</span>
+              <a href="https://pucmm.edu.do/formulario-quejas">  Reclamaciones y sugerencias</a>
+            </li>
+          </ul>
           <ul class="social-network social-circle mb-4">
             <li>
-              <a href="https://www.facebook.com/nrfkenya" class="icoFacebook" title="Facebook" target="_blank">
+              <a href="https://www.facebook.com/pucmm" class="icoFacebook" title="Facebook" target="_blank">
                 <i class="fa-brands fa-square-facebook fa-lg text-white"> </i>
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/company/national-research-fund-kenya/" target="_blank" class="icoLinkedin" title="Linkedin">
+              <a href="https://www.linkedin.com/edu/school?id=12020" target="_blank" class="icoLinkedin" title="Linkedin">
                 <i class="fa-brands fa-linkedin fa-lg text-white"> </i>
               </a>
             </li>
             <li>
-              <a href="https://www.youtube.com/@nationalresearchfundkenya8036" target="_blank">
+              <a href="http://www.youtube.com/pucmmtv/" target="_blank">
                 <i class="fa-brands fa-youtube fa-lg text-white" aria-hidden="true"> </i>
+              </a>
+            </li>
+            <li>
+              <a href="http://www.instagram.com/pucmm" target="_blank">
+                <i class="fa-brands fa-instagram fa-lg text-white" aria-hidden="true"> </i>
               </a>
             </li>
           </ul>
@@ -81,9 +86,8 @@
   <div class="row bg-dark border-top-0">
     <div class="col-md-12 copy">
       <p class="text-center pt-4">
-        © Copyright
-        {{ 'footer.copyright' | translate:{year: dateObj | date:'y'} }} -
-        National Research Fund (NRF) Kenya.  All rights reserved. </p>
+        © {{ 'footer.copyright' | translate:{year: dateObj | date:'y'} }} - PUCMM
+      </p>
     </div>
   </div>
 </footer>
