--- a/src/themes/pucmm/app/home-page/home-news/home-news.component.html
+++ b/src/themes/pucmm/app/home-page/home-news/home-news.component.html
@@ -1,10 +1,11 @@
 <div class="jumbotron jumbotron-fluid mt-ncs text-center" id="home-jumbotron">
   <div class="container text-center">
     <div class="text-center">
-        <h3 id="home-title">National Research Repository</h3>
-      <p class="mobile-hidden"><strong>The National Research Fund</strong> facilitates research for the advancement of science,
-          technology and innovation. One of our core functions is to compile and maintain
-          a national database of research and innovation projects funded by the Fund.
+        <h3 id="home-title">Repositorio Institucional</h3>
+      <p class="mobile-hidden">El <strong>Repositorio Institucional</strong>
+         se esfuerza por brindar acceso abierto, capturar, almacenar, preservar, indexar y
+        distribuir en formato digital, las investigaciones de las diferentes facultades,
+        departamentos ... <a routerLink="/page/about-the-repository" class="text-white"> Leer más </a>
         </p>
     </div>
     <div id="homeSearchForm">
