--- a/src/themes/pucmm/app/home-page/home-page.component.html
+++ b/src/themes/pucmm/app/home-page/home-page.component.html
@@ -12,7 +12,7 @@
       <ds-recent-item-list *ngIf="recentSubmissionspageSize > 0"></ds-recent-item-list>
     </div>
     <div class="col-md-3 bg-light mt-4 ml-0" id="home-sidebar">
-      <h4 class="mt-4 text-center border-bottom pb-3 border-dark border-2">Browse By</h4>
+      <h4 class="mt-4 text-center border-bottom pb-3 border-dark border-2">Navegar por</h4>
 
       <div class="mt-4 mb-4">
         <a routerLink="/browse/subject" class="mt-4 mb-4">
@@ -20,7 +20,7 @@
             <img class="figure-img img-fluid" width="80px"
                  src="/assets/nrf/images/browse/education.png" alt=""/>
             <figcaption class="figure-caption text-center font-weight-bold">
-              <h5>Subject</h5>
+              <h5>Sujeta</h5>
             </figcaption>
           </figure>
         </a>
@@ -32,7 +32,7 @@
             <img class="figure-img img-fluid" width="80px"
                  src="/assets/nrf/images/browse/calendar.png" alt=""/>
             <figcaption class="figure-caption text-center font-weight-bold">
-              <h5>Date Issued</h5>
+              <h5>Fecha de emisión</h5>
             </figcaption>
           </figure>
         </a>
@@ -44,7 +44,7 @@
             <img class="figure-img img-fluid" width="80px"
                  src="/assets/nrf/images/browse/puzzle.png" alt=""/>
             <figcaption class="figure-caption text-center font-weight-bold">
-              <h5>Titles</h5>
+              <h5>Títulos</h5>
             </figcaption>
           </figure>
         </a>
