--- a/src/themes/pucmm/app/home-page/home-page.component.html
+++ b/src/themes/pucmm/app/home-page/home-page.component.html
@@ -12,56 +12,7 @@
       <ds-recent-item-list *ngIf="recentSubmissionspageSize > 0"></ds-recent-item-list>
     </div>
     <div class="col-md-3 bg-light mt-4 ml-0" id="home-sidebar">
-      <h4 class="mt-4 text-center border-bottom pb-3 border-dark border-2">Navegar por</h4>
-
-      <div class="mt-4 mb-4">
-        <a routerLink="/browse/subject" class="mt-4 mb-4">
-          <figure class="mx-auto text-center">
-            <img class="figure-img img-fluid" width="80px"
-                 src="/assets/nrf/images/browse/education.png" alt=""/>
-            <figcaption class="figure-caption text-center font-weight-bold">
-              <h5>Sujeta</h5>
-            </figcaption>
-          </figure>
-        </a>
-      </div>
-
-      <div class="mt-4 mb-4">
-        <a routerLink="/browse/dateissued" class="mt-4 mb-4">
-          <figure class="mx-auto text-center">
-            <img class="figure-img img-fluid" width="80px"
-                 src="/assets/nrf/images/browse/calendar.png" alt=""/>
-            <figcaption class="figure-caption text-center font-weight-bold">
-              <h5>Fecha de emisión</h5>
-            </figcaption>
-          </figure>
-        </a>
-      </div>
-
-      <div class="mt-4 mb-4">
-        <a routerLink="/browse/title" class="mt-4 mb-4">
-          <figure class="mx-auto text-center">
-            <img class="figure-img img-fluid" width="80px"
-                 src="/assets/nrf/images/browse/puzzle.png" alt=""/>
-            <figcaption class="figure-caption text-center font-weight-bold">
-              <h5>Títulos</h5>
-            </figcaption>
-          </figure>
-        </a>
-      </div>
-
-      <div class="mt-4 mb-4">
-        <a routerLink="/browse/author">
-          <figure class="mx-auto text-center">
-            <img class="figure-img img-fluid" width="80px"
-                 src="/assets/nrf/images/browse/users-silhouette.png" alt=""/>
-            <figcaption class="figure-caption text-center font-weight-bold">
-              <h5>Authors</h5>
-            </figcaption>
-          </figure>
-        </a>
-      </div>
-
+      <ds-custom-sidebar></ds-custom-sidebar>
     </div>
   </div>
 
