--- a/src/themes/pucmm/app/about-pucmm/about-pucmm.component.html
+++ b/src/themes/pucmm/app/about-pucmm/about-pucmm.component.html
@@ -1,13 +1,15 @@
 <div class="container p-4">
 
   <div class="row">
-    <div class="col-8">
+    <div class="col-md-8">
       <h3>Repositorio Institucional (RI) Investigare PUCMM</h3>
       <p>
       La Pontificia Universidad Católica Madre y Maestra pone a disposición de la comunidad académica el Repositorio Institucional Investigare PUCMM de su producción científica. Tiene como objetivo dar acceso abierto, capturar, almacenar, preservar, indexar y distribuir, en formato digital, las investigaciones de las diferentes facultades, departamentos, centros de investigación y otras unidades dedicadas a la investigación en la PUCMM, para ampliar la visibilidad de las investigaciones, a través de redes globales.
-        <br>
+      </p>
+      <p>
       El RI Investigare PUCMM incluye: Libros, tesis, revistas, memorias, investigación, videos, entre otros, editados por la PUCMM.
-        <br>
+      </p>
+      <p>
       Los textos completos disponibles en el RI Investigare PUCMM pueden ser copiados en cualquier formato, pero sólo con el propósito de ser usados para investigación o estudio personal. Siempre y cuando:
       </p>
       <ul>
@@ -16,7 +18,7 @@
         <li>No se modifique el contenido del texto completo.</li>
       </ul>
     </div>
-    <div class="col-4">
+    <div class="col-md-4 bg-light mt-4 ml-0" id="about-sidebar">
       <ds-custom-sidebar></ds-custom-sidebar>
     </div>
   </div>
