--- a/src/themes/pucmm/app/home-page/top-level-community-list/top-level-community-list.component.html
+++ b/src/themes/pucmm/app/home-page/top-level-community-list/top-level-community-list.component.html
@@ -1,23 +1,36 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 py-4" id="home-community-list">
-      <ng-container *ngVar="(communitiesRD$ | async) as communitiesRD">
-        <div *ngIf="communitiesRD?.hasSucceeded ">
-          <h2>
-            {{'home.top-level-communities.head' | translate}}
-          </h2>
-          <p class="lead">{{'home.top-level-communities.help' | translate}}</p>
-          <ds-viewable-collection
-            [config]="config"
-            [sortConfig]="sortConfig"
-            [objects]="communitiesRD$ | async"
-            [hideGear]="true"
-            [hidePaginationDetail]="true">
-          </ds-viewable-collection>
-        </div>
-        <ds-error *ngIf="communitiesRD?.hasFailed " message="{{'error.top-level-communites' | translate}}"></ds-error>
-        <ds-themed-loading *ngIf="communitiesRD?.isLoading " message="{{'loading.top-level-communities' | translate}}"></ds-themed-loading>
-      </ng-container>
+      <h2>
+        {{'home.top-level-communities.head' | translate}}
+      </h2>
+      <p class="lead mb-4">{{'home.top-level-communities.help' | translate}}</p>
+        <ngb-carousel #carousel="ngbCarousel"
+                      [showNavigationArrows]="false"
+                      [animation]="true"
+                      [interval]="0"
+                      [showNavigationIndicators]="true">
+          <ng-template ngbSlide *ngFor="let group of groupedSlides">
+            <div class="row">
+              <div class="col-4" *ngFor="let slide of group">
+                <div class="card">
+                  <div class="card-body text-center">
+                    <h5 class="card-title text-pucmm-blue font-weight-bold">{{ slide.itemsNumber }}</h5>
+                    <p class="card-text">{{ slide.name }}</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </ng-template>
+          <div class="d-flex justify-content-center mt-4 bg-pucmm-dark-blue">
+            <ol class="carousel-indicators">
+              <li *ngFor="let group of groupedSlides; let i = index"
+                  [class.active]="carousel.activeId === 'ngb-slide-' + i"
+                  (click)="carousel.select('ngb-slide-' + i)">
+              </li>
+            </ol>
+          </div>
+        </ngb-carousel>
     </div>
     <div class="col-md-6 pt-4">
       <figure class="highcharts-figure">
