--- a/src/themes/pucmm/app/navbar/navbar.component.html
+++ b/src/themes/pucmm/app/navbar/navbar.component.html
@@ -25,6 +25,21 @@
     <div class="reset-padding-md w-100">
       <div id="collapsingNav" class="float-right">
         <ul class="navbar-nav navbar-navigation mr-auto shadow-none">
+          <li class="nav-item">
+            <a class="nav-link mt-0" aria-current="page" routerLink="/home">
+              {{ "navbar.home" | translate }}
+            </a>
+          </li>
+          <li class="nav-item dropdown" ngbDropdown #aboutUsDropdown="ngbDropdown" (mouseenter)="openDropdown(aboutUsDropdown)" (mouseleave)="closeDropdown(aboutUsDropdown)">            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" ngbDropdownToggle>
+            {{ "navbar.aboutUs" | translate }}
+            </a>
+            <div class="dropdown-menu my-0" aria-labelledby="navbarDropdown" ngbDropdownMenu>
+              <a class="dropdown-item" href="#">Institutional Repository</a>
+              <a class="dropdown-item" href="#">Self Archiving</a>
+              <a class="dropdown-item" href="#">Rights, Licences and Certificates</a>
+              <a class="dropdown-item" href="#">Staff</a>
+            </div>
+          </li>
           <li *ngIf="(isXsOrSm$ | async) && (isAuthenticated$ | async)">
             <ds-themed-user-menu [inExpandableNavbar]="true"></ds-themed-user-menu>
           </li>
