--- a/src/themes/pucmm/styles/_global-styles.scss
+++ b/src/themes/pucmm/styles/_global-styles.scss
@@ -70,6 +70,9 @@ a {
 .navbar-brand img{
   max-height: 60px;
 }
+.navbar .navbar-brand ul li .dropdown-toggle:hover{
+  border: none !important;
+}
 #home-jumbotron{
   color: #fff;
   text-align: center;
