--- a/src/themes/pucmm/app/custom-sidebar/custom-sidebar.component.html
+++ b/src/themes/pucmm/app/custom-sidebar/custom-sidebar.component.html
@@ -3,10 +3,10 @@
 <div class="mt-4 mb-4">
   <a routerLink="/browse/author">
     <figure class="mx-auto text-center">
-      <img class="figure-img img-fluid" width="80px"
+      <img class="figure-img img-fluid"
            src="/assets/pucmm/images/browse/autor.png" alt=""/>
       <figcaption class="figure-caption text-center font-weight-bold">
-        <h5>Autoras</h5>
+        Autoras
       </figcaption>
     </figure>
   </a>
@@ -18,7 +18,7 @@
       <img class="figure-img img-fluid" width="80px"
            src="/assets/pucmm/images/browse/education.png" alt=""/>
       <figcaption class="figure-caption text-center font-weight-bold">
-        <h5>Sujeta</h5>
+        Sujeta
       </figcaption>
     </figure>
   </a>
@@ -30,7 +30,7 @@
       <img class="figure-img img-fluid" width="80px"
            src="/assets/pucmm/images/browse/calendar.png" alt=""/>
       <figcaption class="figure-caption text-center font-weight-bold">
-        <h5>Fecha de emisión</h5>
+        Fecha de emisión
       </figcaption>
     </figure>
   </a>
