--- a/src/themes/pucmm/styles/_global-styles.scss
+++ b/src/themes/pucmm/styles/_global-styles.scss
@@ -9,12 +9,11 @@
   --thumbnail-box-shadow: 0 9px 0px 0px white, 0 -9px 0px 0px white, 1px 0 15px -4px rgba(31, 73, 125, 0.8), -1px 0 15px -4px rgba(31, 73, 125, 0.8);
 
 }
-
+body{
+  font-family: Lato,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji" !important;
+}
 
 /*** ADDED BY SYSTEMS LIBRARIAN ***/
-h1, h2, h3, h4, h5, h6 {
-  font-family: Cairo,sans-serif;
-}
 h2, .h2, h4 {
   font-size: 1.25rem;
   font-weight: bold;
