--- a/src/themes/pucmm/app/header/header.component.html
+++ b/src/themes/pucmm/app/header/header.component.html
@@ -38,6 +38,7 @@
             </ul>
           </div>
           <div class="w-100 justify-content-end container py-2">
+            <ds-themed-search-navbar></ds-themed-search-navbar>
             <ds-themed-lang-switch></ds-themed-lang-switch>
             <ds-context-help-toggle></ds-context-help-toggle>
             <ds-themed-auth-nav-menu></ds-themed-auth-nav-menu>
