--- a/src/themes/pucmm/app/navbar/navbar.component.html
+++ b/src/themes/pucmm/app/navbar/navbar.component.html
@@ -36,19 +36,23 @@
             {{ "navbar.aboutUs" | translate }}
             </a>
             <div class="dropdown-menu my-0" aria-labelledby="navbarDropdown" ngbDropdownMenu>
-              <a class="dropdown-item" href="#">{{ "navbar.institutionalRepository" | translate}}</a>
-              <a class="dropdown-item" href="#">{{ "navbar.selfArchiving" | translate }}</a>
-              <a class="dropdown-item" href="#">{{ "navbar.licences" | translate }}</a>
-              <a class="dropdown-item" href="#">{{ "navbar.staff" | translate }}</a>
+<!--              <a class="dropdown-item" href="#">{{ "navbar.institutionalRepository" | translate}}</a>-->
+              <a class="dropdown-item" routerLink="page/self-archiving">
+                {{ "navbar.selfArchiving" | translate }}</a>
+              <a class="dropdown-item" routerLink="page/rights-and-licences">
+                {{ "navbar.licences" | translate }}</a>
+              <a class="dropdown-item" href="https://pucmm.edu.do/biblioteca/info-general/contacto">
+                {{ "navbar.staff" | translate }}
+              </a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-0" routerLink="/home">
+            <a class="nav-link mt-0" href="https://pucmm.edu.do/biblioteca">
               {{ "navbar.library" | translate }}
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-0" routerLink="/home">
+            <a class="nav-link mt-0" href="https://investigacion.pucmm.edu.do/">
               {{ "navbar.investigation" | translate }}
             </a>
           </li>
@@ -59,7 +63,7 @@
             <ng-container *ngComponentOutlet="(sectionMap$ | async).get(section.id)?.component; injector: (sectionMap$ | async).get(section.id)?.injector;"></ng-container>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-0" routerLink="/contact-us">
+            <a class="nav-link mt-0" routerLink="/info/feedback">
               {{ "navbar.contactUs" | translate }}
             </a>
           </li>
